plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.microsoft.sqlserver:mssql-jdbc'
    implementation 'org.postgresql:postgresql'
    implementation 'mysql:mysql-connector-java:8.0.30' 
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.mongodb:mongodb-driver-sync'
    implementation 'mysql:mysql-connector-java'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // Add this dependency to support @ConfigurationProperties
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'
}
